--- a/Popcorn4/app/src/main/res/layout/fragment_popular_movies.xml
+++ b/Popcorn4/app/src/main/res/layout/fragment_popular_movies.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/movies_fragment_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -11,6 +10,15 @@
         android:layout_height="wrap_content"
         android:src="@drawable/movie"
         android:visibility="gone"
+        />
+
+    <ImageView
+        android:id="@+id/search_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:src="@drawable/ic_search"
+        android:visibility="gone"
+        android:padding="10dp"
         />
 
     <androidx.recyclerview.widget.RecyclerView
