--- a/Popcorn4/app/src/main/res/layout/layout_movie.xml
+++ b/Popcorn4/app/src/main/res/layout/layout_movie.xml
@@ -8,23 +8,25 @@
 
     <ScrollView
         android:id="@+id/movie_detail_scroll_view"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="16dp">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/movie_poster"
-                android:layout_width="0dp"
-                android:layout_height="200dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                />
 
             <TextView
                 android:id="@+id/movie_title_text"
@@ -75,7 +77,7 @@
                 android:layout_marginTop="6dp"
                 android:layout_marginStart="6dp"
                 app:layout_constraintLeft_toRightOf="@+id/movie_title_text"
-                app:layout_constraintTop_toBottomOf="@+id/movie_poster"
+                app:layout_constraintTop_toBottomOf="@+id/image_title_container"
                 />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
