--- a/Popcorn4/app/src/main/res/values/colors.xml
+++ b/Popcorn4/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#333333</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="icon_color">#e50914</color>
+    <color name="light_grey">#c0c0c0</color>
 </resources>
