--- a/Popcorn4/app/src/main/res/layout/layout_movie.xml
+++ b/Popcorn4/app/src/main/res/layout/layout_movie.xml
@@ -77,8 +77,19 @@
                 android:layout_marginTop="6dp"
                 android:layout_marginStart="6dp"
                 app:layout_constraintLeft_toRightOf="@+id/movie_title_text"
-                app:layout_constraintTop_toBottomOf="@+id/image_title_container"
+                app:layout_constraintTop_toBottomOf="@+id/movie_poster"
                 />
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/loading_animation"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:lottie_fileName="preloader.json"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
