--- a/Popcorn4/app/src/main/res/layout/fragment_popular_movies.xml
+++ b/Popcorn4/app/src/main/res/layout/fragment_popular_movies.xml
@@ -53,4 +53,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
+    <!--<androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
+        <!--android:id="@+id/swipe_to_refresh"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="0dp"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--/>-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
