--- a/Popcorn4/app/src/main/res/drawable/ic_search.xml
+++ b/Popcorn4/app/src/main/res/drawable/ic_search.xml
@@ -1,4 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="52.966"
-    android:viewportWidth="52.966" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#e50914" android:pathData="M51.704,51.273L36.845,35.82c3.79,-3.801 6.138,-9.041 6.138,-14.82c0,-11.58 -9.42,-21 -21,-21s-21,9.42 -21,21s9.42,21 21,21c5.083,0 9.748,-1.817 13.384,-4.832l14.895,15.491c0.196,0.205 0.458,0.307 0.721,0.307c0.25,0 0.499,-0.093 0.693,-0.279C52.074,52.304 52.086,51.671 51.704,51.273zM21.983,40c-10.477,0 -19,-8.523 -19,-19s8.523,-19 19,-19s19,8.523 19,19S32.459,40 21.983,40z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="13dp"
+    android:height="13dp"
+    android:viewportWidth="13"
+    android:viewportHeight="13">
+  <path
+      android:pathData="M5.056,1.761A3.742,3.742 0,0 1,8.794 5.5a3.742,3.742 0,0 1,-3.738 3.737A3.742,3.742 0,0 1,1.32 5.5,3.742 3.742,0 0,1 5.056,1.76zM11.907,11.849l-2.98,-3.1a5.04,5.04 0,0 0,1.186 -3.25A5.062,5.062 0,0 0,5.056 0.442,5.062 5.062,0 0,0 0,5.5a5.062,5.062 0,0 0,5.056 5.056,5.002 5.002,0 0,0 2.897,-0.915l3.004,3.124a0.656,0.656 0,0 0,0.932 0.018,0.66 0.66,0 0,0 0.018,-0.933z"
+      android:fillColor="#fff"/>
 </vector>
