--- a/Popcorn4/app/src/main/res/layout/default_toolbar.xml
+++ b/Popcorn4/app/src/main/res/layout/default_toolbar.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/nav_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/ic_back"
+                android:background="@drawable/ic_back_red"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
