--- a/Popcorn4/app/src/main/res/layout/fragment_popular_movies.xml
+++ b/Popcorn4/app/src/main/res/layout/fragment_popular_movies.xml
@@ -6,38 +6,91 @@
     android:id="@+id/movies_fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/movie_background"
-    android:paddingBottom="18dp"
-    android:paddingLeft="18dp"
-    android:paddingRight="18dp">
+    android:background="@color/app_backround_color">
 
-    <!--<ImageView-->
-        <!--android:id="@+id/search_icon"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:src="@drawable/ic_search"-->
-        <!--android:visibility="gone"-->
-        <!--android:padding="10dp"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--/>-->
-
-    <ImageView
-        android:id="@+id/liked_movies_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:src="@drawable/ic_like_heart"
-        android:padding="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/popular_movie_list"
+    <TextView
+        android:id="@+id/watch_movie_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        tools:listitem="@layout/layout_popular_movie"
+        android:text="@string/watch_movie_question_title"
+        android:textSize="26sp"
+        android:textColor="@color/title_color_white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="56dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginTop="50dp"
+        />
+
+    <com.pandey.popcorn4.movie.customviews.MovieSearchBar
+        android:id="@+id/movie_search_bar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/watch_movie_title"
+        />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/movie_list_card"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="36dp"
+        app:cardBackgroundColor="@color/movie_list_background_color"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/movie_search_bar"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <LinearLayout
+            android:id="@+id/movie_type_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="38dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/recommended_for_you"
+                    android:textColor="@color/title_color_white"
+                    android:textSize="14sp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/see_all"
+                    android:textColor="@color/title_color_white"
+                    android:textSize="14sp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/popular_movie_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                tools:listitem="@layout/movie_card_view"
+                android:layout_marginTop="14dp"
+                />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/loading_animation"
