--- a/Popcorn4/app/src/main/res/values/colors.xml
+++ b/Popcorn4/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="app_backround_color">#5ca0d3</color>
+    <color name="search_bar_background">#76c0d8</color>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#333333</color>
     <color name="colorAccent">#D81B60</color>
@@ -7,5 +10,7 @@
     <color name="light_grey">#c0c0c0</color>
     <color name="movie_background">#F2EDE7</color>
     <color name="light_green_movie_color">#8effa8</color>
+    <color name="title_color_white">#ffffff</color>
+    <color name="movie_list_background_color">#2c3848</color>
 
 </resources>
