added kotlin support

--- a/Popcorn4/app/src/main/res/layout/fragment_movie_details.xml
+++ b/Popcorn4/app/src/main/res/layout/fragment_movie_details.xml
@@ -21,7 +21,7 @@
             app:layout_constraintEnd_toEndOf="parent">
 
             <ImageView
-                android:id="@+id/movie_poster_image"
+                android:id="@+id/movie_detail_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="fitXY"
