--- a/Popcorn4/app/src/main/res/layout/fragment_photo_capture.xml
+++ b/Popcorn4/app/src/main/res/layout/fragment_photo_capture.xml
@@ -15,6 +15,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/take_picture_button" />
 
+    <ProgressBar
+        android:id="@+id/photo_capture_loader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
     <Button
         android:id="@+id/take_picture_button"
         android:layout_width="0dp"
